# sqlx_seed_script

./: Cargo.toml  README.md  seed.rs
src/: main.rs
