[package]
name = "sqlx_seed_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
